--- a/index.html
+++ b/index.html
@@ -30,7 +30,16 @@
 </head>
 <body>
 
-  
+  <!-- 
+    -#PRELOADING
+  -->
+
+  <div class="loading " data-loading>
+    <img src="./assets/images/loading.svg" width="55" height="55" alt="loading" class="img">
+    <img src="./assets/images/loading-circle.svg" width="70" height="70" alt="" class="circle">
+  </div>
+
+
 
 
 
