--- a/index.html
+++ b/index.html
@@ -127,6 +127,46 @@
 
 
 
+  <main>
+    <article>
+
+        <!-- 
+        - #HERO
+      -->
+
+      <section class="section hero" id="home" aria-label="home">
+        <div class="container">
+
+          <img src="./assets/images/hero-banner.png" width="322" height="322" alt="" class="hero-banner">
+
+          <div class="hero-content">
+
+            <h1 class="h1 hero-title">Richard Ryan</h1>
+
+            <div class="wrapper h2">
+              <strong class="strong" data-letter-effect>Photographer</strong>
+              <strong class="strong" data-letter-effect>Shutterbug</strong>
+              <strong class="strong" data-letter-effect>Cameraman</strong>
+              <strong class="strong" data-letter-effect>Pacific Portraits</strong>
+            </div>
+
+            <p class="hero-text">15+ Years Of Experience</p>
+
+          </div>
+
+        </div>
+
+        <img src="./assets/images/hero-shape.svg" width="211" height="189" alt="" class="shape">
+
+      </section>
+
+      
+
+    </article>
+  </main>
+
+
+
   <!-- 
     - custom js link
   -->
