--- a/index.html
+++ b/index.html
@@ -26,6 +26,12 @@
   -->
   <link rel="stylesheet" href="./assets/font/font.css">
 
+  <!-- 
+    - preload images
+  -->
+  <link rel="preload" as="image" href="./assets/images/loading.svg">
+  <link rel="preload" as="image" href="./assets/images/loading-circle.svg">
+
 
 </head>
 <body>
@@ -932,6 +938,14 @@
 
   </footer>
 
+
+  
+
+  <!-- 
+    - #BACK TO TOP
+  -->
+
+  <a href="#top" class="back-top-btn" aria-label="back to top" data-back-top-btn>0%</a>
 
 
 
