--- a/index.html
+++ b/index.html
@@ -948,6 +948,15 @@
   <a href="#top" class="back-top-btn" aria-label="back to top" data-back-top-btn>0%</a>
 
 
+  
+  <!-- 
+    - #CUSTOM CURSOR
+  -->
+
+  <div class="cursor" data-cursor></div>
+
+
+
 
 
   <!-- 
