--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   -->
   <title>Richard Ryan</title>
   <meta name="title" content="Richard Ryan">
-  <meta name="description" content="This is a photographer portfolio html template, made by codewithsadee.">
+  <meta name="description" content="This is a photographer portfolio html template, made by persiandarik.">
 
   <!-- 
     - favicon
